fixing vertical alignment of header on UI page css

--- a/stylesheets/user-interfaces.css
+++ b/stylesheets/user-interfaces.css
@@ -72,7 +72,7 @@ header {
     text-align: center;
 }
 
-.page-header h1, .page-header h2, .page-header p {
+.page-header h1, .page-header p {
     padding: 1rem;
     max-width: 60%;
 }
@@ -147,7 +147,7 @@ header {
 }
 
 @media only screen and (max-width: 769px) {
-    .page-header h1, .page-header h2, .page-header p {
+    .page-header h1, .page-header p {
         width: 80%;
     }
 }
